# autobuddy

./: .gitignore  .graphify_python  Cargo.toml  Dockerfile  LICENSE  README.md  autobuddy.service  autobuddy.toml  package-lock.json
 .planning/phases/04-the-sentinel/: 04-PLAN.md
.agent/: gsd-file-manifest.json
.github/instructions/: codacy.instructions.md
.github/workflows/: deploy.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v2.0-ROADMAP.md
.planning/phases/01-robust-thresholds-rules/: 01-CONTEXT.md  01-PLAN.md  01-RESEARCH.md  01-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-the-interceptor/: 02-CONTEXT.md  02-PLAN.md  02-RESEARCH.md  02-SUMMARY.md
.planning/phases/03-the-healer/: 03-CONTEXT.md  03-PLAN.md  03-RESEARCH.md  03-SUMMARY.md
.planning/phases/04-the-sentinel/: 04-CONTEXT.md  04-RESEARCH.md  04-SUMMARY.md
.planning/phases/05-the-bodyguard/: 05-PLAN.md  05-RESEARCH.md  05-SUMMARY.md
.planning/phases/06-the-oracle/: 06-PLAN.md  06-RESEARCH.md  06-SUMMARY.md
.planning/phases/07-the-controller/: 07-PLAN.md  07-RESEARCH.md  07-SUMMARY.md
.planning/phases/08-the-tactician/: 08-PLAN.md  08-RESEARCH.md  08-SUMMARY.md
.planning/phases/10-core-integration/: 10-01-SUMMARY.md  10-CONTEXT.md
.planning/phases/12-the-installer/: 12-CONTEXT.md  12-PLAN.md  12-RESEARCH.md
.planning/research/: 07-REMOTE-GOVERNANCE.md
scripts/: install.sh
src/: alert.rs  config.rs  event.rs  main.rs  telegram.rs
src/watchers/: build.rs  mod.rs  process.rs  sentinel.rs  syshealth.rs  terminal.rs
(+17 files in other folders)
